src-tauri/tests/snapshots/fidelity__metadata@math.typ.snap
---
source: tests/fidelity.rs
expression: meta
input_file: tests/fixtures/fidelity/math.typ
---
{
  "properties": {
    "title": "Mathematics"
  },
  "tags": [],
  "links": [],
  "heading_labels": [],
  "agenda": [],
  "recurrence": null,
  "suggestions": 0
}
