src-tauri/tests/snapshots/fidelity__metadata@tables.typ.snap
---
source: tests/fidelity.rs
expression: meta
input_file: tests/fixtures/fidelity/tables.typ
---
{
  "properties": {
    "title": "Tables"
  },
  "tags": [],
  "links": [],
  "heading_labels": [],
  "agenda": [],
  "recurrence": null,
  "suggestions": 0
}
