src-tauri/tests/snapshots/fidelity__svg@callouts-verse.typ.snap
---
source: tests/fidelity.rs
expression: digest
input_file: tests/fixtures/fidelity/callouts-verse.typ
---
{
  "page_count": 1,
  "pages": [
    {
      "width_pt": 595,
      "height_pt": 842,
      "svg_len": 77463
    }
  ]
}
