src-tauri/tests/snapshots/fidelity__svg@tables.typ.snap
---
source: tests/fidelity.rs
expression: digest
input_file: tests/fixtures/fidelity/tables.typ
---
{
  "page_count": 1,
  "pages": [
    {
      "width_pt": 595,
      "height_pt": 842,
      "svg_len": 30151
    }
  ]
}
